# localAI

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  clippy.toml  deny.toml  draft.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  mem_guard.rs
crates/council/: Cargo.toml
crates/council/src/: lib.rs
crates/harness/: Cargo.toml
crates/harness/src/: lib.rs
crates/inference/: Cargo.toml
crates/inference/src/: embeddings.rs  error.rs  generator.rs  health.rs  launch.rs  lib.rs  queue.rs  tokenize.rs  transport.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: lib.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  okf_store.rs
crates/migration/: Cargo.toml
crates/migration/migrations/: 20260708_001_init_schema.sql
crates/migration/src/: lib.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: heartbeat.rs  lib.rs  main.rs  paths.rs  process_runner.rs  queue.rs  startup.rs  supervisor.rs
crates/server/tests/: process_runner_tests.rs  supervisor_tests.rs
crates/watchdog/: Cargo.toml
crates/watchdog/src/: lib.rs  main.rs
crates/watchdog/tests/: heartbeat_integration.rs
crates/worker/: Cargo.toml
crates/worker/src/: distill.rs  ingest.rs  lib.rs  main.rs  scrape.rs
docs/: ci.md  config.md  open-questions.md  prior-art-integration.md  runbook.md  skills.md  standards.md  traceability.md
docs/adr/: ADR-001-no-docker-for-llm.md  ADR-002-sqlite-vec.md  ADR-003-model-selection.md  ADR-004-llama-server-vs-ffi.md  ADR-005-bandit-algorithm.md
schemas/: README.md  brief.schema.json  event-payload.schema.json  handoff.schema.json  hook-verdict.schema.json  okf-frontmatter.schema.json  trajectory.schema.json  worker-result.schema.json
specs/: 00-vision.md  01-architecture.md  02-memory.md  03-inference.md  04-orchestration.md  05-council.md  06-router.md  07-harness.md  08-agents.md  09-self-healing.md  10-learning.md  11-security.md  12-ui.md  13-ingestion.md  14-evals.md  15-hardening-register.md  16-reward-signals.md  17-training-pipeline.md  GAPS.md  REVIEW.md
