[workspace]
members = [
    "crates/core",
    "crates/ledger",
    "crates/server",
    "crates/cli",
    "crates/worker",
    "crates/memory",
    "crates/inference",
    "crates/router",
    "crates/council",
    "crates/ingestion",
    "crates/harness",
    "crates/security",
    "crates/migration",
    "crates/watchdog",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Antariksh Karmakar"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
