[package]
name = "localai-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
localai-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
