[package]
name = "localai-ledger"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
localai-core = { path = "../core" }
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
localai-migration = { path = "../migration" }
tempfile.workspace = true

[lints]
workspace = true
