[package]
name = "localai-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
localai-core = { path = "../core" }
localai-ledger = { path = "../ledger" }
localai-migration = { path = "../migration" }
localai-inference = { path = "../inference" }
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

[[bin]]
name = "localai-brain"
path = "src/main.rs"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
