[package]
name = "localai-watchdog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
localai-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["process", "signal"] }

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "localai-watchdog"
path = "src/main.rs"

[lints]
workspace = true
