[package]
name = "localai-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "localai-worker"
path = "src/main.rs"

[dependencies]
localai-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

[lints]
workspace = true
